--- a/SpaceRace/Properties/Resources.resx
+++ b/SpaceRace/Properties/Resources.resx
@@ -118,19 +118,31 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ouch" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Death-sound-in-Minecraft.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="ow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Minecraft Steve Hurt Sound Effect(Ouh).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="photo-1465101162946-4377e57745c3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\photo-1465101162946-4377e57745c3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="point" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\level up sound effect.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="ow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Minecraft Steve Hurt Sound Effect(Ouh).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="w" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Winner Gagnant!.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ouch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Death-sound-in-Minecraft.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="spaceBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\spaceBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="collide" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\96692__cgeffex__asteroids-ship-fire.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="gameSound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\568612__szegvari__space-bar-ambient.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="level" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\76234__jivatma07__level-up-3note2.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
